--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,9 @@
 {
     color:red;
 }
+footer{
+    background-color: cornflowerblue;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+}
